# googletest-1764

1764_CMake-errors-in-googlemock/: CMakeLists.txt  CMakeLists.txt.in  build.sh
